fix video link on mobile

--- a/src/default.css
+++ b/src/default.css
@@ -301,15 +301,34 @@ p {
     height: 0px;
 }
 
+/*Video*/
+iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    max-width: 420px;
+    max-height: 315px;
+}
+
+.iframe-wrapper {
+    position: relative;
+    padding-bottom: 75.0%;
+    height: 0;
+}
+
+
 @media only screen and (min-width: 46.875em) {
 
+    
     #content {
         max-width: 960px;
         margin: 0 200px;
     }
 
     #contentalt {
-        margin: 0 200px 0 20px; 
+        margin: 0 200px 0 20px;
     }
 
     #leftside, #rightside {
